--- a/startup.css
+++ b/startup.css
@@ -22,7 +22,7 @@ body {
   font-size: 5em;
 }
 hr{
-  width: 400px;
+  width: 35%;
   border-top: 1px solid #f8f8f8;
   border-bottom: 1px solid rgba(0,0,0,0.2);
 }
